# youtube-analytics-pipeline

./: TEST_ADD_CHANNEL_REPORT.md  VERIFICATION_REPORT.md  pyproject.toml  test_add_channel_functions.py
dbt_project/: package-lock.yml
dbt_project/models/mart/: agg_daily_metrics.sql  fct_video_performance.sql
dbt_project/models/staging/: stg_youtube__channels.sql  stg_youtube__playlists.sql  stg_youtube__videos.sql
docs/: guilde.md  report.md
extract/schemas/: schema_postgres.sql
ml/: README.md  __init__.py  config.py  data_loader.py  data_processor.py  evaluator.py  features.py  fetch_intermediate.py  label.py  model_trainer.py  predict.py  requirements.txt  save_load.py  test_predict.py  train.py  train_viral_predictor.py  viral_predictor_model.pkl
ml/cache/: _quota_tracker.json  channel_UCA_23dkEYToAc37hjSsCnXA.json  channel_UCX6OQ3DkcsbYNE6H8uQQuVA.json  search_mixigaming.json  search_mrbeast.json  videos_UCA_23dkEYToAc37hjSsCnXA_1.json  videos_UCA_23dkEYToAc37hjSsCnXA_50.json  videos_UCX6OQ3DkcsbYNE6H8uQQuVA_1.json  videos_UCX6OQ3DkcsbYNE6H8uQQuVA_50.json  vstats_00NgUctWoLQ_26QQE7EsnLA_3ryID_SwU5E_5OLs1GWB4OA_7ESeQBeikKs_7IKab3HcfFk_8bTQMDM4qvY_8krJy31Diow_9WEQts7b8Pw_CWbV3.json  vstats_KaUuPNYHFNg.json  vstats_YmRW2sGSAyE.json  vstats_YmRW2sGSAyE_cWF-yVPgSnQ.json
ml/src/: __init__.py
ml/src/models/: __init__.py  channel_classifier.py  channel_clusterer.py  explainer.py  label_creator.py  video_classifier.py
ml/tests/: __init__.py  test_feature_engineer.py  test_models.py  test_pipeline.py  test_youtube_client.py
ml/trained_models/: channel_clusterer.pkl  channel_fe.pkl  explainer.pkl  model_a_channel_classifier.pkl  model_b1_viral_classifier.pkl  model_b2_timewindow_classifier.pkl  video_fe.pkl
serve/: app.py  requirements.txt
serve/pages/: 1_Channel_Search.py  2_Add_Channel.py  3_ML_Prediction.py
(+4 files in other folders)
